--- a/public/index.html
+++ b/public/index.html
@@ -255,6 +255,7 @@
          </section>
          <section>
             <div class="wrap">
+              <h2>Meetable Team</h2>
                <div class="card-40 bg-white">
                   <div class="flex-content">
                      <h2>Sebastian Avila</h2>
