investor deck updates

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
         <span class="background dark" style="background-image:url('https://source.unsplash.com/rc8sigFJAHo')"></span>
         <div class="wrap">
           <p class="text-context">Be the new office rockstar</p>
-          <h2>Meetable is an Saas Platform that allows for seamless and collaborative meeting note taking; tracking of action
-            items, decisions, updates, agenda and attendees; all the while connected to the industry leading PMP and collaboration
+          <h2>Meetable is an SaaS Platform that allows for seamless and collaborative meeting note taking; tracking of action
+            items, decisions, updates, agenda and attendees; all the while connected to the industry leading PMP and Collaboration
             tools.</h2>
         </div>
       </section>
@@ -139,9 +139,9 @@
                   <svg class="fa-cloud">
                     <use xlink:href="#fa-cloud"></use>
                   </svg>
-                  All your Meetings
+                  Cloud Storage
                 </h2>
-                <p>safely stored in the cloud</p>
+                <p>Meetings are stored in the cloud</p>
               </div>
             </li>
             <li>
@@ -345,27 +345,27 @@
         <span class="background dark" style="background-image:url('https://source.unsplash.com/OJX7gIU3E6U')"></span>
         <div class="wrap">
           <h2>Product Roadmap</h2>
-          <ul class="flexblock steps" style="color:black">
+          <ul class="flexblock steps" style="color:rgb(29, 29, 29); text-shadow: 0px;">
             <li>
-              <h2>Minimum Viable Product</h2>
+              <p class="text-intro">Minimum Viable Product</p>
               <p>Fully functional meeting creating and review experience, user and team creation capabilities. Account creation
                 through popular providers (Google/Facebook/Github)</p>
             </li>
             <li>
               <div class="process step-2"></div>
-              <h2>Beta Testing</h2>
+              <p class="text-intro">Beta Testing</p>
               <p>Product made widely available for a few users to demostrate the capabilities of the product. Initial integrations
                 to 3rd Party Apps begin development</p>
             </li>
             <li>
               <div class="process step-3"></div>
-              <h2>Beta redesigned</h2>
+              <p class="text-intro">Beta redesigned</p>
               <p>Product looks beautiful and functionality has been revised to ensure user satisfaction. At least 3 product
                 integrations have been sucessfully developed and integrated in the production enviroment.</p>
             </li>
             <li>
               <div class="process step-4"></div>
-              <h2>Go To Market</h2>
+              <p class="text-intro">Go To Market</p>
               <p>Fully operational product released for general availability. Active sales motions put in place to drive key
                 wins in the education and business spaces. Online targeting for professional adoption.</p>
             </li>
