update integration logos

--- a/public/index.html
+++ b/public/index.html
@@ -207,8 +207,8 @@
             </li>
             <li class="bg-white">
               <figure>
-                <img src="src/logos/gmail.svg" alt="">
-                <figcaption class="content-center">Gmail</figcaption>
+                <img src="src/logos/slack.svg" alt="">
+                <figcaption class="content-center">Slack</figcaption>
               </figure>
             </li>
           </ul>
