proofread deck content

--- a/public/index.html
+++ b/public/index.html
@@ -43,10 +43,10 @@
           <div class="flex-content">
             <h3>User Profile: Student</h3>
             <p>Managing group projects is a critical part of student life.</p>
-            <p>Students need an affordable tool to track results of group project meeting, track team attendance and manage
+            <p>Students need an affordable tool to track results of group project meetings, track team attendance and manage
               action items.
             </p>
-            <p>Meetable offers a way to effectively manage teams and share meeting results and collaborate seemlessly</p>
+            <p>Meetable offers a way to effectively manage teams and share meeting results and collaborate seemlessly.</p>
           </div>
         </div>
       </section>
@@ -56,10 +56,10 @@
           <div class="flex-content">
             <h3>User Profile: Professional</h3>
             <p>As a professional, being able to keep track of your conversations with clients is critical to ensure the success
-              of projects and maintain good relationships with your clients</p>
+              of projects and maintain good relationships with your clients.</p>
             <p>Keep track of your ongoing projects and the conversations you have with your clients. Send updates on what you
-              have discussed and share outstanding action items</p>
-            <p>Meetable offers a solution to keep your clients up to date on the status of your projects</p>
+              have discussed and share outstanding action items.</p>
+            <p>Meetable offers a solution to keep your clients up to date on the status of your projects.</p>
           </div>
           <figure>
             <img src="https://source.unsplash.com/ArqZgXYqhjU/800x600" alt="">
@@ -74,12 +74,12 @@
           </figure>
           <div class="flex-content">
             <h3>User Profile: Business</h3>
-            <p>In the business environment, it is important for team to keep track of meeting to ensure a streamlined flow of
-              business</p>
-            <p>Manage organizational projects and keep track of discussions and action items to ensure clarity of execution
-              and maintain team synergy</p>
+            <p>In the business environment, it is important for teams to track meeting results to ensure a streamlined flow of
+              business processes.</p>
+            <p>Manage organizational projects and keep track of discussions and action items to fascilitate clarity of execution
+              and maintain team synergy.</p>
             <p>The Meetable platform allows businesses to efficiently operationalize strategies while maintaining open channels
-              of communication and collaboration for project teams</p>
+              of communication and collaboration for project teams.</p>
           </div>
         </div>
       </section>
@@ -161,7 +161,7 @@
 
       <section class="bg-white">
         <div class="wrap">
-          <h2>Integrations</h2>
+          <h2>Projected Integrations</h2>
           <ul class="flexblock clients border">
             <li class="bg-white">
               <figure>
